--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ bcrypt==4.3.0
 dj-database-url==2.3.0
 Django==5.2
 django-widget-tweaks==1.5.0
+gunicorn==23.0.0
+packaging==25.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dotenv==1.1.0
